main div complete

--- a/index.html
+++ b/index.html
@@ -17,51 +17,63 @@
           <img src="resources/images/logo-white.png" alt="white glasses logo">
         </div>
         <div class="brand">
-          <p></p>
+          <p>Tortoiseshell Optics</p>
         </div>
         <div class="nav">
+          <li>Services</li>
+          <li>Products</li>
+          <li>Contact</li>
         </div>
-        <div class="mobile.nav">
+        <div class="mobile-nav">
+          <li>Menu</li>
         </div>
       </div>
-    </div>
-<!--- tagline outside of container? --->
-      <div class="tagline">
 
+<!--- tagline inside of container? --->
+     <div class="tag-container">
+      <div class="tagline">
+        <h1>DON'T JUST LOOK, SEE.</h1>
       </div>
+     </div>
+    </div>
     </header>
 <!--- below cover image --->
     <div class="main">
 <!--- icons/info --->
       <div class="icons">
         <div class="exam">
-
+          <img src="resources/images/paper-icon.png" alt="Icon of piece of paper">
+          <p>Comprehensive Exams</p>
         </div>
         <div class="fittings">
-
+          <img src="resources/images/ruler-icon.png" alt="Icon of a ruler">
+          <p>Custom Fittings</p>
         </div>
         <div class="delivery">
-
+          <img src="resources/images/truck-icon.png" alt="Icon of a delivery truck">
+          <p>Fast Delivery</p>
         </div>
       </div>
 <!--- blue boxes/info --->
+     <div class=mid>
       <div class="philosophy">
         <div class="title">
-
+          <h2>PHILOSOPHY</h2>
         </div>
         <div class="info">
-
+         <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
         </div>
 
       </div>
       <div class="appointments">
         <div class="title">
-
+         <h2>APPOINTMENTS</h2>
         </div>
         <div class="info">
-
+          <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
         </div>
       </div>
+    </div>
     </div>
     <footer>
 <!--- footer inside container --->
