all but mobile mid div complete

--- a/index.html
+++ b/index.html
@@ -75,16 +75,18 @@
       </div>
     </div>
     </div>
+  <div class="container">
     <footer>
 <!--- footer inside container --->
-      <div class="container">
-        <div class="bot.logo">
 
+        <div class="bot-logo">
+          <img src="resources/images/logo-black.png" alt="black glasses logo">
         </div>
         <div class="copyr">
-
+         <p>Copyright Tortoiseshell Optics</p>
         </div>
-      </div>
+
     </footer>
+      </div>
   </body>
 </html>
